[gd_scene load_steps=3 format=3 uid="uid://jmri6q34vrcl"]

[ext_resource type="Script" path="res://scripts/game_creator.gd" id="1_1gdc5"]
[ext_resource type="Theme" uid="uid://dxexyvotr4ywf" path="res://assets/UI/Main Menu UI Theme.tres" id="1_dedmr"]

[node name="Game Creator" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_1gdc5")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2
theme = ExtResource("1_dedmr")
theme_override_constants/separation = 20

[node name="Label" type="Label" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_dedmr")
text = "Enter Seed"
horizontal_alignment = 1
vertical_alignment = 1

[node name="LineEditContainer" type="CenterContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="LineEdit" type="LineEdit" parent="PanelContainer/VBoxContainer/LineEditContainer"]
layout_mode = 2
placeholder_text = "Enter Seed as number! "
max_length = 10
expand_to_text_length = true
flat = true
caret_blink = true

[node name="RandomizeContainer" type="CenterContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="Randomize" type="Button" parent="PanelContainer/VBoxContainer/RandomizeContainer"]
layout_mode = 2
theme = ExtResource("1_dedmr")
theme_override_font_sizes/font_size = 24
action_mode = 0
text = "Randomize"
flat = true

[node name="StartContainer" type="CenterContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="start" type="Button" parent="PanelContainer/VBoxContainer/StartContainer"]
layout_mode = 2
theme = ExtResource("1_dedmr")
action_mode = 0
text = "START"
flat = true

[connection signal="text_changed" from="PanelContainer/VBoxContainer/LineEditContainer/LineEdit" to="." method="_on_line_edit_text_changed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/RandomizeContainer/Randomize" to="." method="_on_randomize_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/StartContainer/start" to="." method="_on_start_pressed"]
